--- a/package.json
+++ b/package.json
@@ -10,5 +10,17 @@
     "axios": "^0.24.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
-  }
+  },
+  "description": "Api",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WidoMaster94/ApiCaseWork.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/WidoMaster94/ApiCaseWork/issues"
+  },
+  "homepage": "https://github.com/WidoMaster94/ApiCaseWork#readme"
 }
