--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.24.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "node": "^16.13.0"
   },
   "description": "Api",
   "devDependencies": {},
